<resources>
    <string name="app_name">RickyAndMortyCharacters</string>
    <string name="total_price_text">0</string>
    <string name="img_content_description">Image of the character</string>
    <string name="button_add_text">+</string>
    <string name="button_remove_text">-</string>
    <string name="tv_quantity_number">0</string>
    <string name="tv_quantity_text">Quantity</string>
    <string name="tv_dollar_sign">$</string>
    <string name="tv_base_price">12.000</string>
    <string name="tv_go_the_basket">Go to the basket</string>
    <string name="tv_go_to_pay">Go to pay</string>
    <string name="tv_subtotal">Subtotal</string>
    <string name="title_checkout">Checkout</string>
</resources>