<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.CheckoutFragment">

    <LinearLayout
        android:id="@+id/linear_layout_buttons_atras"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_marginHorizontal="3sp"
        app:layout_constraintBottom_toTopOf="@+id/character_list_recycle"
        app:layout_constraintEnd_toEndOf="@id/character_list_recycle"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/goback"
            android:id="@+id/btn_go_back"
            android:layout_width="30dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_checkout"
            android:fontFamily="@font/robotobold"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/character_list_recycle"
        android:layout_width="402dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:padding="10dp"
        android:id="@+id/linear_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="3sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/character_list_recycle">


        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_subtotal"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/text"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tvTotalPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_quantity_number"
                android:fontFamily="@font/robotoblack"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </LinearLayout>



        <TextView
            android:fontFamily="@font/robotoregular"
            android:id="@+id/btn_pay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:background="@drawable/button_go"
            android:text="@string/tv_go_to_pay"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>