<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:queryHint="Buscar personaje"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvEmptyState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Sin resultados"
        android:gravity="center"
        android:visibility="gone"
        android:padding="16dp"
        android:fontFamily="@font/robotobold"
        android:textColor="@color/text"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/character_list_recycle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:padding="10dp"
        android:id="@+id/linear_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="3sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/character_list_recycle">


        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_subtotal"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/text"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tvTotalPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/tv_quantity_number"
                android:fontFamily="@font/robotoblack"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </LinearLayout>

        <TextView
            android:fontFamily="@font/robotoregular"
            android:id="@+id/btn_basket"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:background="@drawable/button_go"
            android:text="@string/tv_go_the_basket"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>